fixing the overlap issue

--- a/style.css
+++ b/style.css
@@ -11,3 +11,6 @@
 .custom-row{
   margin-left: 10px;
 }
+body{
+  background-color:rgb(145, 145, 165) ;
+}
